# scriptorium

./: README.md  add.bat  bench.cc  bench.csv  run.bat
lisp/paren/ktg-paren-f15fe0aeb6ad/: .gitignore  CMakeLists.txt  Makefile  README.md  libparen.cpp  libparen.h  paren.cpp  paren.sln  paren.vcxproj  paren.vcxproj.filters
os/objectscript/: .gitignore  CMakeLists.txt  LICENSE  README.md  old_CMakeLists.txt  os-fcgi.cpp  os.config.h.in  os.cpp
os/objectscript/cmake/: FindPCRE.cmake  FindSoci.cmake
os/objectscript/conf/etc/init.d/: os-fcgi
os/objectscript/conf/etc/os-fcgi/: conf.os
os/objectscript/contrib/: change_install_name.sh
os/objectscript/src/: CMakeLists.txt  objectscript.cpp  objectscript.h  os-binder-FunctionClassImp.tpl  os-binder-FunctionImp.tpl  os-binder-FunctionImpVoid.tpl  os-binder-arg-cc-functions.h  os-binder-cc-functions.h  os-binder-function.h  os-binder-generator.os  os-binder.h  os-heap-old.cpp  os-heap-old.h  os-heap.cpp  os-heap.h
os/objectscript/src/ext-base64/: cdecode.cpp  cdecode.h  cencode.cpp  os-base64.cpp  os-base64.h
os/objectscript/src/ext-curl/: os-curl.cpp  os-curl.h
os/objectscript/src/ext-datetime/: os-datetime.cpp  os-datetime.h
os/objectscript/src/ext-filesystem/: os-filesystem.cpp  os-filesystem.h
os/objectscript/src/ext-hashlib/: os-hashlib.cpp  os-hashlib.h
os/objectscript/src/ext-hashlib/crc32/: os-crc32.c
os/objectscript/src/ext-hashlib/des/: des.cpp
os/objectscript/src/ext-hashlib/md5/: md5.cpp  md5.h
os/objectscript/src/ext-hashlib/sha/: hmac.cpp  sha.h  sha1.cpp  sha224-256.cpp  sha384-512.cpp  usha.cpp
os/objectscript/src/ext-iconv/: os-iconv.cpp  os-iconv.h
os/objectscript/src/ext-json/: os-json.cpp  os-json.h
os/objectscript/src/ext-libnoise/: os-libnoise.cpp  os-libnoise.h
os/objectscript/src/ext-libnoise/doc/: Makefile  readme.txt
os/objectscript/src/ext-libnoise/noise/: Sources  basictypes.h  exception.h  interp.h  latlon.cpp  latlon.h  mathconsts.h  misc.h  noise.h  noisegen.cpp  noisegen.h  vectortable.h
os/objectscript/src/ext-libnoise/noiseutils/: noiseutils.cpp  noiseutils.h  readme.txt
os/objectscript/src/ext-odbo/: os-odbo.cpp  os-odbo.h
os/objectscript/src/ext-opengl/: os-opengl.cpp  os-opengl.h  os-opengl.inc  parse-gl.os
os/objectscript/src/ext-process/: os-process.cpp  os-process.h
os/objectscript/src/ext-regexp/: os-regexp.cpp  os-regexp.h
os/objectscript/src/ext-socket/clsockets/: ActiveSocket.cpp  ActiveSocket.h  Host.h  Makefile  PassiveSocket.cpp  PassiveSocket.h  README  ReleaseNotes  SimpleSocket.cpp  (+3 more)
os/objectscript/src/ext-sqlite3/: os-sqlite3.cpp  os-sqlite3.h
os/objectscript/src/ext-url/: os-url.cpp  os-url.h
os/objectscript/src/ext-zlib/: os-zlib.cpp  os-zlib.h
os/objectscript/src/internal-scripts/: gdb-cores.sh  upgrade-colorearth.sh  upgrade-os-debug.sh  upgrade-os-full.sh
os/objectscript/syntax-highlighting/: objectscript.vim
os/objectscript/win/: os-projects.sln
os/objectscript/win/os/: os.vcxproj  os.vcxproj.filters  test.os  test_odbc.os
os/objectscript/win/os-fcgi/: copydll.cmd  os-fcgi.vcxproj  os-fcgi.vcxproj.filters  stdafx.cpp
pawn/pawn/source/amx/: CMakeLists.txt  amx.c  amx.h  amxDGram.def  amxDGram.rc  amxFile.rc  amxFixed.def  amxFixed.rc  amxFloat.def  amxFloat.rc  amxProcess.def  amxProcess.rc  amxargs.c  amxargs.rc  amxcons.c  amxcore.c  amxdbg.c  amxdbg.h  amxdef.asm  amxdefn.asm  amxdgram.c  amxexec.asm  amxexec_arm7.s  amxexec_arm7_gas.s  amxexec_gcc.c  amxexec_thumb2.s  amxexec_thumb2_gas.s  amxexecn.asm  amxfile.c  amxfile.def  amxfixed.c  amxgc.c  amxgc.h  amxjitr.asm  amxjits.asm  amxjitsn.asm  amxpool.c  amxpool.h  amxprocess.c  amxstring.c  (+20 more)
pawn/pawn/source/compiler/: CMakeLists.txt  libpawnc.c  libpawnc.def  libpawnc.def.borland  libpawnc.lbc  lstring.c  lstring.h  memfile.c  memfile.h  pawncc.c  pawncc.def  pawncc.def.borland  pawncc.rc  pawndisasm.c  sc.h  sc1.c  sc2.c  sc3.c  sc4.c  sc5.c  sc5.scp  sc6.c  sc7.c  sc7.scp  scexpand.c  sci18n.c  sclist.c  scmemfil.c  scpack.c  scstate.c  scstub.c  scvars.c  svnrev.h
sgscript/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  core.mk  make.bat  makefile
sgscript/docs/: advdoc.css  advdoc.js  docgen.sgs  docs.css  docs.js  error_policy.txt  markdown.sgs  sgs.cppbc.docs.htm  sgs.cppbc.docs.txt  sgs.json.docs.htm  sgs.json.docs.txt  sgs.meta.docs.htm  sgs.meta.docs.txt  sgs.sockets.docs.htm  sgs.sockets.docs.txt  sgs.xgmath.docs.htm  sgs.xgmath.docs.txt  sgscript.docs.htm  sgscript.docs.txt  sgscript.tutorial.htm  sgscript.tutorial.txt
sgscript/examples/: action-flow.sgs  closure-counter.sgs  directory-size.sgs  hash-test.sgs  memory-test.sgs  opchain-test.sgs  pagination.sgs  recursion-test.sgs  sandbox.sgs  sgstest_mt.c  speed-dict.sgs  speed-map.sgs  threaded-load.sgs
sgscript/examples/demodumps/: fapi.sgs  fmt.sgs  misapi.sgs  osapi.sgs
sgscript/ext/: cppbc.sgs  sgs_cppbc.h  sgs_em.c  sgs_idbg.c  sgs_idbg.h  sgs_prof.c  sgs_prof.h  sgsapitest.c  sgsc.c  sgscppbctest.cpp  sgscppbctest.h  sgsdemo.htm  sgsexe.c  sgsjson.c  sgsmeta.c  sgspproc.c  sgssockets.c  sgstest.c  sgsvm.c  sgsxgmath.c  sgsxgmath.h
sgscript/jni/: Android.mk
sgscript/src/: sgs_bcg.c  sgs_ctx.c  sgs_fnt.c  sgs_int.h  sgs_msvc_dirent.h  sgs_proc.c  sgs_regex.c  sgs_regex.h  sgs_std.c  sgs_stdL.c  sgs_tok.c  sgs_util.c  sgs_util.h  sgs_xpc.c  sgscript.h
sgscript/tests/: !API_TF_fmt.sgs  !API_TF_io.sgs  !API_TF_json.sgs  !API_TF_meta.sgs  !API_TF_std.sgs  !API_TF_string.sgs  !API_TF_syntax.sgs  !API_TF_threading.sgs  !API_TF_type.sgs  !API_TF_xgmath.sgs  argovr.sgs  array.sgs  bug00001.sgs  bug00002.sgs  bug00003_TF.sgs  bug00004_TF.sgs  bug00005_TF.sgs  bug00006_TF.sgs  bug00007.sgs  bug00009_TF.sgs  bug00010.sgs  bug00011.sgs  bug00012.sgs  bug00013_TF.sgs  bug00014.sgs  bug00015.sgs  bug00016.sgs  bug00017_TF.sgs  bug00018_TF.sgs  bug00019_TF.sgs  bug00020.sgs  bug00021_TF.sgs  bug00022.sgs  bug00023_TF.sgs  bug00024_TF.sgs  bug00025_TF.sgs  bug00026_TF.sgs  bug00027.sgs  bug00028.sgs  closure_thiscall.sgs  (+119 more)
sgscript/tests/monkey/: monkey.sgs  monkey_dict.txt
(+2404 files in other folders)
